# Robotics

class2_ws/install/: local_setup.sh  setup.sh
class2_ws/log/: latest_build
class2_ws/src/assignment2/: package.xml  setup.cfg  setup.py
class2_ws/src/assignment2/assignment2/: assignment2.py
class2_ws/src/assignment2/launch/: assignment2.launch.py  dummy_bot.yaml  test.launch.py
class3_ws/install/: local_setup.sh  setup.sh
class3_ws/log/: latest_build
class3_ws/src/: lcourtn5_assignment3.tar
class3_ws/src/assignment3/: package.xml  setup.cfg  setup.py
class4_ws/install/: local_setup.sh  setup.bash  setup.sh
class4_ws/log/: latest_build
class4_ws/src/assigment4/: package.xml  setup.cfg  setup.py
class4_ws/src/assigment4/assignment4/: assignment4.py  joint_driver.py
class4_ws/src/assigment4/launch/: dummy_model.rviz  single_rrbot.urdf
class4_ws/src/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
class4_ws/src/log/: latest_build
class56_ws/template/: kinematics.py  lqr_ekf_control.py  lqr_steer_control.py  sensors.py  utils.py
test_final/: README.txt
test_final/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
test_final/log/: latest_build
test_final/src/__MACOSX/template/: ._EN613 Final Project Template.docx
test_final/src/template/: EN613 Final Project Template.docx
test_final/src/template/action_package/: CMakeLists.txt  package.xml
test_final/src/template/robot_control_pkg/: package.xml  setup.py
test_final/src/template/robot_spawner_pkg/: package.xml  setup.py
(+118 files in other folders)
